@@ -23,8 +23,9 @@ ViSP 2.7.1 (under development)
     . New fonctions in vp1394TwoGrabber to turn auto shutter and auto gain
       on. Also new getter to get the auto shutter and auto gain min/max values.
     . Support Visual Studio 2012 (MSVC11)
-    . Introduce C++ visibility support as described here 
+    . Introduce C++ visibility support as described here
       http://gcc.gnu.org/wiki/Visibility
+    . Better support of image formats: *.tiff, *.jpeg, *.bmp, *.pbm, ...
   - Examples
     . Introduction of tutorials as minimalist line by line illustrated examples.
   - Bug fixed
